--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Guesser Game</title>
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="./css/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
         <h1>Guesser Game</h1>
         <nav>
-            <button id="homeBtn">Home</button>
-            <button id="messagesBtn">Messages</button>
             <button id="loginBtn">Login/Signup</button>
+
         </nav>
     </header>
 
@@ -27,6 +27,6 @@
         </div>
     </div>
 
-    <script src="/js/main.js"></script>
+    <script src="./js/main.js"></script>
 </body>
 </html>
